gobmkida/g2/show_dragons
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/show_dragons/src/engine/dragon.c:1959:7: error: use of undeclared identifier 'snames_2'
v22 = snames_2[*( ( int *)v18 + 15)]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/show_dragons/src/engine/dragon.c:1961:7: error: use of undeclared identifier 'snames_2'
v23 = snames_2[*( ( int *)v18 + 4)]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/show_dragons/src/engine/dragon.c:1981:31: error: use of undeclared identifier 'snames_2'
gprintf( ", owl status %s\n", snames_2[*( ( int *)v18 + 6)]); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/show_dragons/src/obj/1/dragon.o] Error 1
